--- a/Portfolio/vercel.json
+++ b/Portfolio/vercel.json
@@ -1,5 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+  "version": 2,
+  "builds": [
+    { "src": "Portfolio/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "Portfolio/$1" }
   ]
 }
