--- a/Portfolio/vercel.json
+++ b/Portfolio/vercel.json
@@ -1,5 +1,8 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/api/(.*)",
+      "destination": "https://my-public-api.example.com/api/$1"
+    }
   ]
 }
